add theme route and change user model
